# url-shortener

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pyproject.toml
.github/workflows/: ci-tests.yml
backend/: .env.example  Makefile  main.py  pyproject.toml
backend/config/: __init__.py  celery.py  settings.py  urls.py
backend/links/: constants.py  forms.py  models.py  redis_client.py  tasks.py  urls.py  utils.py  views.py
backend/links/migrations/: 0001_initial.py  0002_alter_link_original_url_alter_link_password_and_more.py  0003_link_click_count_alter_link_password_utm.py  0004_delete_utm.py  0005_link_owner.py  0006_link_notes.py  0007_link_original_url_hash.py
backend/static/assets/scripts/: app.js
backend/static/assets/styles/: style.css
backend/tests/: conftest.py
backend/tests/factories/: __init__.py  link_factory.py
backend/tests/links/: test_link_cache.py  test_link_factory.py  test_link_info_api.py  test_link_models.py  test_link_redirect_service.py  test_link_shortener_api.py  test_link_tasks.py  test_link_validations.py
config/: settings.py
frontend/: .prettierignore  .prettierrc  eslint.config.js  package-lock.json  package.json
frontend/src/scripts/: indexShortener.js  input.js  shortenerForm.js
frontend/templates/layouts/: default.html
frontend/templates/links/: edit.html  enter_password.html  error_page.html  list.html  new.html
frontend/templates/pages/: index.html
frontend/templates/shared/: footer.html  messages.html  navbar.html
nginx/: dev.conf  prod.conf
